{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 53,
  "lineage": "4b80e22d-065e-60be-e07a-107c785f4e29",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "fargate-tutorial",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:994159167629:loadbalancer/app/fargate-tutorial-lb/325fcc9a3e361229",
            "arn_suffix": "app/fargate-tutorial-lb/325fcc9a3e361229",
            "desync_mitigation_mode": "defensive",
            "dns_name": "fargate-tutorial-lb-23523764.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:994159167629:loadbalancer/app/fargate-tutorial-lb/325fcc9a3e361229",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fargate-tutorial-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-002772236351109f9",
              "sg-05cf64cc6b374ff7b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005d787d3fe4a0180"
              },
              {
                "subnet_id": "subnet-092ea30b9b9b5f697"
              }
            ],
            "subnets": [
              "subnet-005d787d3fe4a0180",
              "subnet-092ea30b9b9b5f697"
            ],
            "tags_all": {
              "Env": "dev",
              "Name": "fargate-tutorial_dev",
              "Service": "fargate-tutorial"
            },
            "vpc_id": "vpc-00b0c13cad8a3c3ee",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "fargate-tutorial_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:994159167629:listener/app/fargate-tutorial-lb/325fcc9a3e361229/5d29bb2bdbd2ad0b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:994159167629:targetgroup/fargate-tutorial/62c4ef5ee7e56fe2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:994159167629:listener/app/fargate-tutorial-lb/325fcc9a3e361229/5d29bb2bdbd2ad0b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:994159167629:loadbalancer/app/fargate-tutorial-lb/325fcc9a3e361229",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Env": "dev",
              "Name": "fargate-tutorial_dev",
              "Service": "fargate-tutorial"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.fargate-tutorial",
            "aws_internet_gateway.igw",
            "aws_lb_target_group.fargate-tutorial",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e4aa425c51a7ff0",
            "association_id": "eipassoc-07063522732350073",
            "domain": "vpc",
            "id": "eipalloc-05e4aa425c51a7ff0",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-078f5e0385242e75e",
            "private_dns": "ip-10-0-1-145.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.145",
            "public_dns": "ec2-3-112-179-243.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.179.243",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Env": "dev",
              "Name": "fargate-tutorial_dev",
              "Service": "fargate-tutorial"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:994159167629:internet-gateway/igw-02579decdc9cc712b",
            "id": "igw-02579decdc9cc712b",
            "owner_id": "994159167629",
            "tags_all": {
              "Env": "dev",
              "Name": "fargate-tutorial_dev",
              "Service": "fargate-tutorial"
            },
            "vpc_id": "vpc-00b0c13cad8a3c3ee"
          },
          "dependencies": [
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fargate-tutorial",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:994159167629:targetgroup/fargate-tutorial/62c4ef5ee7e56fe2",
            "arn_suffix": "targetgroup/fargate-tutorial/62c4ef5ee7e56fe2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:994159167629:targetgroup/fargate-tutorial/62c4ef5ee7e56fe2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "fargate-tutorial",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Env": "dev",
              "Name": "fargate-tutorial_dev",
              "Service": "fargate-tutorial"
            },
            "target_type": "ip",
            "vpc_id": "vpc-00b0c13cad8a3c3ee"
          },
          "dependencies": [
            "aws_alb.fargate-tutorial",
            "aws_internet_gateway.igw",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e4aa425c51a7ff0",
            "connectivity_type": "public",
            "id": "nat-085ab74e8a39d9051",
            "network_interface_id": "eni-078f5e0385242e75e",
            "private_ip": "10.0.1.145",
            "public_ip": "3.112.179.243",
            "subnet_id": "subnet-092ea30b9b9b5f697",
            "tags_all": {
              "Env": "dev",
              "Name": "fargate-tutorial_dev",
              "Service": "fargate-tutorial"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-037b45a82873e280d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-085ab74e8a39d9051",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-037b45a82873e280d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02579decdc9cc712b",
            "id": "r-rtb-01209ca5434619f9f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01209ca5434619f9f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:994159167629:route-table/rtb-037b45a82873e280d",
            "id": "rtb-037b45a82873e280d",
            "owner_id": "994159167629",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-085ab74e8a39d9051",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "private",
              "Service": "fargate-tutorial"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b0c13cad8a3c3ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:994159167629:route-table/rtb-01209ca5434619f9f",
            "id": "rtb-01209ca5434619f9f",
            "owner_id": "994159167629",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02579decdc9cc712b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "public",
              "Service": "fargate-tutorial"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b0c13cad8a3c3ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e9c1b13b114ace8",
            "route_table_id": "rtb-037b45a82873e280d",
            "subnet_id": "subnet-0449988ff24c32e16"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f9438f386b7c713",
            "route_table_id": "rtb-01209ca5434619f9f",
            "subnet_id": "subnet-092ea30b9b9b5f697"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df3df6c4d35671ef",
            "route_table_id": "rtb-01209ca5434619f9f",
            "subnet_id": "subnet-005d787d3fe4a0180"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:994159167629:security-group/sg-002772236351109f9",
            "description": "allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002772236351109f9",
            "ingress": [],
            "name": "egress-all",
            "name_prefix": "",
            "owner_id": "994159167629",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "egress-all"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "egress-all",
              "Service": "fargate-tutorial"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b0c13cad8a3c3ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:994159167629:security-group/sg-05cf64cc6b374ff7b",
            "description": "HTTP traffic",
            "egress": [],
            "id": "sg-05cf64cc6b374ff7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": "",
            "owner_id": "994159167629",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Env": "dev",
              "Name": "fargate-tutorial_dev",
              "Service": "fargate-tutorial"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b0c13cad8a3c3ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:994159167629:security-group/sg-0ee99524811a85a71",
            "description": "allow ingress to app",
            "egress": [],
            "id": "sg-0ee99524811a85a71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ingress-app",
            "name_prefix": "",
            "owner_id": "994159167629",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ingress-app"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ingress-app",
              "Service": "fargate-tutorial"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b0c13cad8a3c3ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:994159167629:subnet/subnet-0449988ff24c32e16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0449988ff24c32e16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "994159167629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private | ap-northeast-1a"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "private | ap-northeast-1a",
              "Service": "fargate-tutorial"
            },
            "vpc_id": "vpc-00b0c13cad8a3c3ee"
          },
          "dependencies": [
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:994159167629:subnet/subnet-092ea30b9b9b5f697",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092ea30b9b9b5f697",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "994159167629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public | ap-northeast-1a"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "public | ap-northeast-1a",
              "Service": "fargate-tutorial"
            },
            "vpc_id": "vpc-00b0c13cad8a3c3ee"
          },
          "dependencies": [
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:994159167629:subnet/subnet-005d787d3fe4a0180",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005d787d3fe4a0180",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "994159167629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public | ap-northeast-1c"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "public | ap-northeast-1c",
              "Service": "fargate-tutorial"
            },
            "vpc_id": "vpc-00b0c13cad8a3c3ee"
          },
          "dependencies": [
            "aws_vpc.fargate-tutorial"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fargate-tutorial",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:994159167629:vpc/vpc-00b0c13cad8a3c3ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00582965a589bc346",
            "default_route_table_id": "rtb-0233c5603b838b3c8",
            "default_security_group_id": "sg-0510a27d6e7ac4ac9",
            "dhcp_options_id": "dopt-0fd645f960c05d928",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00b0c13cad8a3c3ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0233c5603b838b3c8",
            "owner_id": "994159167629",
            "tags_all": {
              "Env": "dev",
              "Name": "fargate-tutorial_dev",
              "Service": "fargate-tutorial"
            }
          }
        }
      ]
    }
  ]
}